<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseActivity"
    android:background="@color/green2">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/chatzylogo_2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:id="@+id/img_1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/img_1"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="225dp"
        android:fontFamily="@font/nunito_extrabold"
        android:textSize="40dp"
        android:textColor="@color/white2"
        android:id="@+id/txtChatzy"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtChatzy"
        android:text="@string/tagline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14sp"
        android:fontFamily="@font/nunito_light"
        android:textSize="20dp"
        android:textColor="@color/white2"
        android:id="@+id/txtTagline"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTagline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:width="340dp"
        android:height="50dp"
        android:text="@string/buttonLogin"
        android:textSize="20dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/green1"
        android:background="@drawable/button_shape"
        android:backgroundTint="@color/white2"
        android:id="@+id/btnLogin"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:width="340dp"
        android:height="50dp"
        android:text="@string/buttonSignup"
        android:textSize="20dp"
        android:fontFamily="@font/nunito_bold"
        android:textColor="@color/white2"
        android:background="@drawable/button_shape"
        android:id="@+id/btnSignup"/>



</RelativeLayout>